--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/lab": "^5.0.0-alpha.166",
     "@mui/material-nextjs": "^5.15.9",
     "@types/next": "^9.0.0",
+    "mongodb": "^6.4.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
