--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/lab": "^5.0.0-alpha.166",
     "@mui/material-nextjs": "^5.15.9",
+    "@types/lodash": "^4.17.1",
     "@types/next": "^9.0.0",
+    "lodash": "^4.17.21",
     "mongodb": "^6.4.0",
     "next": "^14.1.0",
     "react": "^18.2.0",
